feat: adicionado nova estrutura para subcomandos mantendo código mais limpo e legível.